# cctrl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  cctrl.code-workspace  cleanup.sh  flashbin.sh  generate.sh
application/: CMakeLists.txt
application/src/: cctrl.cpp
cmake/: compile_commands_always.cmake  set_link_options_for_targets.cmake  toolchain_avr_m328p.cmake
cmake/cctrl_warnings/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/mock/serial/include/serial/: serial.h
drivers/mock/serial/src/: serial.cpp
drivers/serial_avr/: CMakeLists.txt
drivers/serial_avr/include/serial/: serial.h
drivers/serial_avr/src/: serial.cpp
libraries/: CMakeLists.txt
libraries/gcc-11.2/: CMakeLists.txt
libraries/gcc-11.2/include/bits/: c++config.h
libraries/memman/: CMakeLists.txt
libraries/memman/include/memman/: memman.h
libraries/memman/src/: memman.cpp
libraries/utl/: CMakeLists.txt
libraries/utl/include/utl/: algorithm.h  array.h  bitpattern.h  execution.h  iterator.h  logger.h  logger_test.h
mockup/: CMakeLists.txt
mockup/src/: mockup.cpp
src/: main.cpp  serial.cpp  serial.h
src/utl/: algorithm.h  iterator.h  memory.h
