cmake_minimum_required(VERSION 3.21)
include(${CMAKE_SOURCE_DIR}/cmake/set_link_options_for_targets.cmake)

project(cctrl)
set(CMAKE_SYSTEM_VERSION 1)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if (NOT MOCKUP)
    add_subdirectory(application)
    add_subdirectory(cmake/cctrl_warnings)
    add_subdirectory(drivers)
    add_subdirectory(libraries)
    add_subdirectory(third_party/umm_malloc)
    add_subdirectory(third_party/avr-libstdcpp-v3)
    set_link_options_for_all_targets()
endif (NOT MOCKUP)

if (MOCKUP)
    add_subdirectory(mockup)
    add_subdirectory(cmake/cctrl_warnings)
    add_subdirectory(libraries/utl)
    add_subdirectory(drivers/mock/serial)
endif(MOCKUP)

include(${CMAKE_SOURCE_DIR}/cmake/compile_commands_always.cmake)
